--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,3 +64,15 @@
 #editParameterModal{
   width: auto!important;
 }
+
+.modal-content2 {
+  position: absolute;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, .2);
+  border-radius: 6px;
+  outline: none;
+  -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+          box-shadow: 0 3px 9px rgba(0, 0, 0, .5);
+}
