--- a/public/views/evaluations/index.html
+++ b/public/views/evaluations/index.html
@@ -1,5 +1,5 @@
 <div>    
-    <div id="wrapper" ng-init="getMapList()">
+    <div id="wrapper" ng-init="loadData()">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">    
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">           
@@ -50,26 +50,48 @@
 
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
+                                <label>Recommender set name</label>
+                                <select class="form-control" ng-model="selectedRecommender" 
+                                        ng-change="loadMapsAndScenesFromRecommenderId()"
+                                        data-ng-options="rec as rec.poolName for rec in recommenderList">
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-3">
                                 <label>Map name</label>
-                                
                                 <select class="form-control" ng-model="selectedMap"
-                                        ng-change="getSceneListFromMapId(map)"
+                                        ng-change="selectMap()"
                                         data-ng-options="map as map.name for map in mapList">           
                                 </select>
                             </div>
                             
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                                 <label>Scene name</label>
-                                <select class="form-control" ng-model="selectedScene" 
-                                         data-ng-options="scene as scene.sceneName for scene in sceneList">
+                                <select class="form-control" ng-model="selectedScene"
+                                        ng-change="selectScene()"
+                                        data-ng-options="scene as scene.sceneName for scene in sceneList">
                                 </select>
                             </div>
                             
-                            <div class="col-sm-4">
-                                <label>Select static items</label><br/>
+                            <div class="col-sm-3">
+                                <label>Select user</label>
+                                <select class="form-control" ng-model="selectedUser"
+                                        data-ng-options="user as user.name for user in userList">
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <label>Select item types</label><br/>
+                                <select class="form-control" multiple ng-multiple="true" 
+                                        ng-change="selectItemTypes()" ng-model="selectedItemTypes"
+                                        ng-options="item.name for item in itemTypeList"></select>
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <label>Select items</label><br/>
                                 <select class="form-control" multiple ng-multiple="true" ng-model="selectedItems"
-                                        ng-options="item.name for item in staticItemList"></select>
+                                        ng-options="item.itemName for item in itemList"></select>
                             </div>
                             
                             <div class="col-sm-4">
@@ -90,31 +112,8 @@
                     </div>
 
                     <div class="panel-body"> 
-                        <script type="text/javascript">
-                              google.charts.load('current', {'packages':['corechart']});
-                              google.charts.setOnLoadCallback(drawChart);
-
-                              function drawChart() {
-                                var data = google.visualization.arrayToDataTable([
-                                  ['Year', 'Sales', 'Expenses'],
-                                  ['2004',  1000,      400],
-                                  ['2005',  1170,      460],
-                                  ['2006',  660,       1120],
-                                  ['2007',  1030,      540]
-                                ]);
-
-                                var options = {
-                                  title: 'Evaluation of recommender',
-                                  curveType: 'function',
-                                  legend: { position: 'bottom' }
-                                };
-
-                                var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-                                chart.draw(data, options);
-                              }
-                            </script>
-                       <div id="curve_chart" style="width: 900px; height: 500px"></div>
+                         
+                       <div id="chart_div" style="width: 900px; height: 500px"></div>
                     </div>
                 </div>
             </div>  
