--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -76,7 +76,7 @@
                     <div class="panel-body">      
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Parameter set name</label>
+                                <label>Recommender set name</label>
                                 <input ng-model="rec.poolName" class="form-control" />
                             </div>
 
@@ -138,7 +138,7 @@
                     <table class="table table-striped" ng-hide="recommenderList.length==0">
                         <thead>
                             <tr>
-                                <td><strong>Pool name</strong></td>
+                                <td><strong>Recommender set name</strong></td>
                                 <td><strong>Recommender type</strong></td>
                                 <td><strong>Strategy type</strong></td>
                                 <td><strong>Maximum distance to go (meters)</strong></td>
@@ -253,7 +253,7 @@
               <div class="modal-body">
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Pool name</label>
+                                <label>Recommender set name</label>
                                 <input class="form-control" ng-model="selectEditRecommenderValue.poolName"/>
                             </div>
 
