--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -369,8 +369,8 @@
                                // }else if(brng==270){
                                //     var newPos = [pos[0], toGrad(λ2)];
                                // }else{
-                                    var newPos = [toGrad(φ2), toGrad(λ2)]
-                                }//var newPos = [toGrad(φ2), toGrad(λ2)];
+                                    var newPos = [toGrad(φ2), toGrad(λ2)];
+                                //}//var newPos = [toGrad(φ2), toGrad(λ2)];
                                 
                                 return newPos;
                             }
